# ecom-toon

./: .gitignore  README.md  package-lock.json  production_test.py  pyproject.toml  pytest.ini
cli/: main.py
ecom_toon/: __init__.py  gzip_utils.py  metrics.py  schemas.py  toon.py  toon_parser.py  writer.py
ecom_toon/adapters/: shopify_like.py
samples/: catalog_50-tojson.json  catalog_50.json  product1-tojson.json  product1.json  product2-tojson.json  product2.json  product3-tojson.json  product3.json  product4-tojson.json  product4.json  product5-tojson.json  product5.json  product6-tojson.json
tests/: conftest.py  test_edgecases.py  test_load.py  test_roundtrip.py  test_stress.py  test_unit.py
vscode-extension/: CHANGELOG.md  README.md  ecom-toon-1.0.0.vsix  ecom-toon-1.0.2.vsix  package-lock.json  package.json
vscode-extension/ecom-toon/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode-extension/ecom-toon/src/: extension.ts
vscode-extension/src/: extension.ts
